--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django>=1.10.1
-dj-database-url==0.4.1
+dj-database-url>=0.4.1
 gunicorn>=19.6.0
-psycopg2==2.8.5
-pytz==2016.7
-whitenoise==3.2.1
+psycopg2>=2.8.5
+pytz>=2016.7
+whitenoise>=3.2.1
